<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".DetailActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/anaekran"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center_horizontal|center_vertical"

                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/ulke_verileri"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Conutry"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Cases"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Today_Cases"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTodayCases"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Deaths"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDeaths"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Today_Deaths"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTodayDeaths"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/recovered"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRecovered"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Active"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvActive"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"

                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/Critical"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCritical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>


                </LinearLayout>

            </ScrollView>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/anaekran"


        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/anaekran2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp"
        android:background="#0EBA5D"
        android:onClick="ulkeekran"
        android:text="@string/country_chance"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:button_cornerRadius="30dp"
        app:button_duration="250"
        app:button_scale="0.87" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/anaekran2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/adView2"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#0EBA5D"
        android:onClick="anaekran"
        android:text="@string/ana_sayfa"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:button_cornerRadius="30dp"
        app:button_duration="250"
        app:button_scale="0.87" />

   <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"

        android:visibility="invisible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7168645932922326/1410811759"  />


</RelativeLayout>